<resources>

    <string name="app_name">U.F.Foes!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_title_screen">TitleScreen</string>
    <string name="start">Start Game!</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="restart">Restart</string>
    <string name="options_title">Options</string>
    <string name="options_volume">Volume</string>
    <string-array name="LaserControlOptions">
        <item >Shake</item>
        <item >TouchShip</item>
        <item >TouchScreen</item>
    </string-array>
        <string name="laser_options">Laser Control Options</string>
        <string name="ship_options">Ship Control Options</string>
        <string-array name="ShipControlOptions">
            <item >Target</item>
            <item >Joystick</item>
            <item >Swipe</item>
        </string-array>
        
    <string name="title_activity_bluetooth_screen">Bluetooth Game Screen</string>
    <string name="bluetoothGame">Bluetooth Game</string>
    <string name="JoinAGame">Join a Game</string>
    <string name="HostAGame">Host a Game</string>    
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>

</resources>