<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:padding="@dimen/padding_medium"
        android:text="@string/app_name"
        tools:context=".TitleScreen" />

    <Button
        android:id="@+id/StartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start" />

    <Button
        android:id="@+id/RestartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/StartGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/restart" />

</RelativeLayout>
