<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:padding="@dimen/padding_medium"
        android:text="@string/app_name"
        tools:context=".BluetoothScreen" />

    <Button
        android:id="@+id/HostAGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/HostAGame" />

    <Button
        android:id="@+id/JoinGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HostAGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/JoinAGame" />

</RelativeLayout>
